MG: restructuring all solvers. Now more adaptative and the hasTransition function can now be implemented without ambigousity. Also adaption to jeskos new examples.